BUG: v4skin | styles -> fixed the rendering of empty mainnavigation entries, now readable in link-color and italic instead of white

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -255,6 +255,8 @@ footer {
 
                 li {
                     padding: 2px 15px 2px 12px;
+                    color: @link-color;
+                    font-style: italic;
 
                     a {
                         font-style: normal;
@@ -262,6 +264,7 @@ footer {
                         display: block;
                         text-align: right;
                     }
+
 
                     &.divider {
                         background-color: @white;
